[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
nalgebra = { version="0.32.1", features=['rand-no-std'] }
rand = "0.8.5"
getrandom = { features=["js"] }
serde = { version="1.0.153", features=["derive"] }
wasm-bindgen = { version="0.2.84", features=["serde-serialize"] }
lib-simulation = { path = "../simulation" }
